<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_buyer"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myreseller.ui.fragments.buyer.HomeBuyersFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_buyer" />

    <fragment
        android:id="@+id/navigation_buyer_orders"
        android:name="com.example.myreseller.ui.fragments.buyer.OrdersBuyerFragment"
        android:label="@string/title_buyer_orders"
        tools:layout="@layout/fragment_orders_buyer" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myreseller.ui.fragments.buyer.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_buyer" />
</navigation>