<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screen_background_new"/>
    </FrameLayout>
    <com.example.myreseller.utils.MRTextViewBold
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/splash_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.example.myreseller.utils.MREditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="abc@gmail.com"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.example.myreseller.utils.MREditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            tools:text="123456"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:layout_constraintRight_toRightOf="parent">

        <com.example.myreseller.utils.MRTextViewRegular
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize" />
    </LinearLayout>

    <com.example.myreseller.utils.MRButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <com.example.myreseller.utils.MRTextViewRegular
            android:id="@+id/tv_don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize"/>
        <com.example.myreseller.utils.MRTextViewBold
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/clickable_text_view_padding"
            android:text="@string/register"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/lbl_text_view_textSize"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>