<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.BuyerSellerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.example.myreseller.utils.MRTextViewBold
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/description_buyer_seller"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/rg_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_radio_button_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user">

            <com.example.myreseller.utils.MRRadioButton
                android:id="@+id/rb_buyer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/drawable_gender_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/rb_lbl_buyer"
                android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                android:textStyle="bold"/>

            <com.example.myreseller.utils.MRRadioButton
                android:id="@+id/rb_seller"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/drawable_gender_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/rb_lbl_seller"
                android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                android:textStyle="bold"/>
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>