<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UploadActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Upload_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.myreseller.utils.MRTextViewBold
            android:id="@+id/tv_title_upload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/upload_an_item"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_Upload_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_item_image"
                android:layout_width="@dimen/item_image_size"
                android:layout_height="@dimen/item_image_size"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/colorLightGrey"
                    android:contentDescription="@string/item_description"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_image_placeholder"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background"/>

            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_item_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_item_image">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_item_price"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_item_name">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/et_hint_item_description"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_item_price">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_size"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/et_hint_item_size"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_item_description">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:padding="25dp"
                app:layout_constraintTop_toBottomOf="@id/til_item_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_quantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/et_hint_item_quantity"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_upload">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_item_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="25dp"
                android:hint="@string/et_hint_item_color"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_item_quantity">

                <com.example.myreseller.utils.MREditText
                    android:id="@+id/et_item_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_textSize"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.myreseller.utils.MRButton
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_upload"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_item_color"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>